проверка наличия объекта для отображения в секции guests (сделано через if)

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                     <div class="guests__item flex">
                       <button data-path="Denis-Telman" class="guests__link-person btn-reset">Денис Тельман</button>
                       <button data-path="Yuri-Gorin" class="guests__link-person btn-reset">Юрий Горин</button>
-                      <button data-path="" class="guests__link-person btn-reset">Максим Сергеев</button>
+                      <button data-path="Maxim-Sergeev" class="guests__link-person btn-reset">Максим Сергеев</button>
                     </div>
                   </div>
                 </div>
@@ -845,7 +845,7 @@
             </div>
           </div>
           <div class="guests__info col-lg-4">
-            <div class="guests__person guests__person_active">
+            <div class="guests__person guests__somebody guests__person_active">
               <img src="./img/somebody.png" alt="заглушка пока никто не выбран">
             </div>
             <div class="guests__person" data-target="Olga-Martynova">
