--- a/index.html
+++ b/index.html
@@ -2487,11 +2487,11 @@
           <h2 class="products__titleh2_hidden">
             Купить радиоприёмник
           </h2>
-          <div class="products__img col-lg-7">
+          <div class="products__img col-xl-7 col-lg-6">
             <img src="./img/new.png" alt="новинка" class="product__new">
             <img class="product__photo" src="./img/radio.png" alt="фото радиоприёмника">
           </div>
-          <div class="product__text col-lg-5">
+          <div class="product__text col-xl-5 col-lg-6">
             <h3 class="products__title section__title">
               Будь с&nbsp;нами на&nbsp;одной волне!
             </h3>
@@ -2499,9 +2499,9 @@
               <p class="product__descr">
                 Друзья, рады представить вам продукт
                 нашего производства! Да-да, несмотря
-                на&nbsp;то, что мы&nbsp;только начали
+                на&nbsp;то, <br class="product__br-text"> что мы&nbsp;только начали
                 свой путь радиовещателей, нам хочется,
-                чтобы&nbsp;вы&nbsp;могли как следует
+                чтобы&nbsp;вы&nbsp;могли как следует <br class="product__br-text">
                 нас расслышать:)
               </p>
               <p class="product__descr">
@@ -2542,7 +2542,7 @@
     <section class="about section-offset">
       <div class="container">
         <div class="row about__row1">
-          <div class="about__text col-lg-7">
+          <div class="about__text col-xl-7 col-lg-8">
             <h2 class="about__title section__title">
               О нас
             </h2>
@@ -2556,7 +2556,7 @@
               Нам важен каждый слушатель,
               поэтому вы&nbsp;можете поделиться обратной
               связью о&nbsp;наших предеачах, темах,
-              подборках и&nbsp;вообще обо всём! Это можно
+              подборках и&nbsp;вообще обо всём! <br class="product__br-text"> Это можно
               сделать либо написав нам в&nbsp;форме ниже,
               либо кликнув на&nbsp;наши соцсети в&nbsp;подвале
               сайта. Спасибо! Услышимся!:)
@@ -2668,17 +2668,17 @@
         </div>
         <div class="row">
           <form action="#" class="about__form">
-            <div class="form-group col-lg-10">
+            <div class="form-group col-xl-10 col-lg-12">
               <textarea class="form__textarea form-control" autocorrect="on" placeholder="Что скажете?"
                 autocomplete="off" id="message" data-validate-field="message" name="message"></textarea>
             </div>
-            <div class="about__inputs flex col-lg-10">
+            <div class="about__inputs flex col-xl-10 col-lg-12">
               <div class="form-group about__input">
                 <input type="name" class="form__input form-control" placeholder="Имя*" autocomplete="off"
                   data-validate-field="name" name="name">
               </div>
               <div class="form-group about__input">
-                <input type="email" class="form__input form-control" placeholder="email*" autocomplete="off"
+                <input type="email" class="form__input form-control" placeholder="Email*" autocomplete="off"
                   data-validate-field="email" name="email" id="email">
               </div>
             </div>
@@ -2697,7 +2697,7 @@
     <div class="footer__part1 section-offset">
       <div class="container">
         <div class="row footer__container">
-          <article class="footer__social col-lg-2">
+          <article class="footer__social col-xl-2 col-lg-3">
             <svg class="footer-logo" aria-label="логотип" width="160" height="20" viewBox="0 0 160 20" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -2769,7 +2769,7 @@
               </li>
             </ul>
           </article>
-          <article class="footer__menu col-lg-5">
+          <article class="footer__menu col-xl-5 col-lg-6">
             <nav class="footer__nav">
               <ul class="footer__menu-list list-reset flex">
                 <li class="footer__menu-item">
