--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
   <header class="header" aria-label="шапка сайта">
     <div class="header__part1 container flex">
-      <div class="menu-btn">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="conteiner-logo">
+       <div class="conteiner-logo">
         <a href="#" class="header__logo-link">
           <img src="img/logo.svg" class="header__logo-img" alt="логотип фирмы">
         </a>
       </div>
       <div class="menu-container flex">
+        <div class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <nav class="menu flex">
           <ul class="menu__list-items list-reset flex">
             <li class="menu__item">
@@ -1125,7 +1125,7 @@
     <section class="broadcasts section-offset" aria-label="Передачи">
       <div class="container">
         <div class="row broadcasts__row">
-          <article class="broadcasts__author flex col-lg-4 col-xl-3">
+          <article class="broadcasts__author flex col-lg-4 col-xl-3 col-md-6">
             <div class="broadcasts__task">
               <h2 class="broadcasts__title section__title">
                 Передачи
@@ -1142,7 +1142,7 @@
             </div>
             
           </article>
-          <article class="broadcasts__content col-lg-8 col-xl-9">
+          <article class="broadcasts__content col-lg-8 col-xl-9 col-md-12">
             <p class="broadcasts__nothing"></p>
             <ul class="broadcasts__list list-reset flex">
               <li data-target="DmitryGutenberg" class="broadcasts__item broadcasts__item_active broadcasts__img1 col-3">
@@ -2645,7 +2645,7 @@
                   Светлана Кортнева
                 </h4>
                 <p class="about__author-text">
-                  Господа! Внимание! Благодарю за&nbsp;внимание!
+                  Художник-оформитель. Оформляю
                 </p>
               </div>
               <!-- If we need navigation buttons -->
